--- a/Proxmox/tasks/instances/docker_lxc/homer.yml
+++ b/Proxmox/tasks/instances/docker_lxc/homer.yml
@@ -1,11 +1,12 @@
 - vars:
       app_name: homer
       mapped_uid: '{{ instance.subuid | int + 1000 }}'
-      cache_buster: '{{ 999999 | random | to_uuid | hash("md5") | truncate(8, True, "") }}'
       config:
           root: '{{ env.JARVIS_CONFIGS_DIR }}/{{ app_name }}'
           local: '{{ instance.configs }}/{{ app_name }}'
   block:
+      - set_fact:
+            cache_buster: '{{ 999999 | random | to_uuid | hash("md5") | truncate(8, True, "") }}'
       - name: '{{ app_name | upper }}: Check Health Endpoint'
         uri:
             url: 'http://{{ instance.ip }}:{{ env.JARVIS_SERVICES[app_name].port }}/'
@@ -100,10 +101,33 @@
                               homerDomainUrl: "https://{{ env.JARVIS_DOMAIN }}"
                               homerIpUrl: "http://{{ env.JARVIS_NETWORK_PREFIX }}.{{ env.JARVIS_SERVICES.homer.id }}:{{ env.JARVIS_SERVICES.homer.port }}"
                             services:
-                              - name: "Services"
-                                icon: "fas fa-server"
+                              - name: "Apps"
+                                icon: "fas fa-th"
                                 items:
-                            {% for k,s in env.JARVIS_SERVICES.items() if not s.hidden|default(false) %}
+                            {% for k,s in env.JARVIS_SERVICES.items() if not s.hidden|default(false) and s.section|default('Apps') == 'Apps' %}
+                            {% set protocol = 'https' if s.https|default(false) else 'http' %}
+                            {% set portSuffix = '' if (s.port==80 and protocol=='http') or (s.port==443 and protocol=='https') else ':'+s.port|string %}
+                                  - name: "{{ s.name }}"
+                                    {% if s.smart_card is not defined -%}
+                                    subtitle: "{{ s.subtitle }}"
+                                    {% endif -%}
+                                    logo: "{{ env.JARVIS_ICON_CDN }}{{ s.logo }}"
+                                    {% if s.smart_card is defined -%}
+                                    {% for sc_k, sc_v in s.smart_card.items() -%}
+                                    {{ sc_k }}: {{ sc_v | to_json }}
+                                    {% endfor -%}
+                                    {% endif -%}
+                                    url: "https://{% if s.root_domain | default(false) %}{{ env.JARVIS_DOMAIN }}{% else %}{{ s.subdomains[0] | default(k) }}.{{ env.JARVIS_DOMAIN }}{% endif %}{{ s.path | default('') }}"
+                                    endpoint: "https://{% if s.root_domain | default(false) %}{{ env.JARVIS_DOMAIN }}{% else %}{{ s.subdomains[0] | default(k) }}.{{ env.JARVIS_DOMAIN }}{% endif %}"
+                                    ip: "{{ protocol }}://{{ env.JARVIS_NETWORK_PREFIX }}.{{ s.id }}{{ portSuffix }}{{ s.path|default('') }}"
+                                    target: "_blank"
+                                    tag: "open {{ k }}"
+                            {% endfor %}
+
+                              - name: "Media Server"
+                                icon: "fas fa-film"
+                                items:
+                            {% for k,s in env.JARVIS_SERVICES.items() if not s.hidden|default(false) and s.section|default('Apps') == 'Media Server' %}
                             {% set protocol = 'https' if s.https|default(false) else 'http' %}
                             {% set portSuffix = '' if (s.port==80 and protocol=='http') or (s.port==443 and protocol=='https') else ':'+s.port|string %}
                                   - name: "{{ s.name }}"
@@ -142,7 +166,7 @@
                     loop:
                         - file: icons/logo.svg
                           content: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="45" fill="#3498db"/><text x="50" y="62" font-family="Arial" font-size="32" font-weight="bold" fill="white" text-anchor="middle">J</text></svg>'
-                        - file: favicon.svg
+                        - file: icons/favicon.svg
                           content: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="45" fill="#6366f1"/><text x="50" y="62" font-family="Arial" font-size="32" font-weight="bold" fill="white" text-anchor="middle">J</text></svg>'
                         - file: manifest.json
                           content: |
@@ -179,11 +203,11 @@
                             <html>
                               <head>
                                 <meta charset="UTF-8" />
-                                <link rel="icon" href="assets/icons/favicon.ico" />
+                                <link rel="icon" href="assets/icons/favicon.svg" />
                                 <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" sizes="180x180">
                                 <link rel="mask-icon" href="assets/icons/logo.svg">
                                 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-                                <title>Homer</title>
+                                <title>Jarvis Dashboard</title>
                                 <script type="module" crossorigin src="./resources/index-BF4DSS10.js"></script>
                                 <link rel="stylesheet" crossorigin href="./resources/index-BUSrgv1m.css">
                                 <link rel="manifest" href="./assets/manifest.json" crossorigin="use-credentials">
@@ -197,7 +221,6 @@
                         owner: '{{ mapped_uid }}'
                         group: '{{ mapped_uid }}'
                         mode: '0666'
-        when: not healthy.config
 
       - block:
             - name: '{{ app_name | upper }}: Create docker-compose.yml'
@@ -238,7 +261,7 @@
 
       - name: '{{ app_name | upper }}: Restart for Config Update'
         command: pct exec {{ id }} -- docker restart {{ app_name }}
-        when: healthy.app and (not healthy.config)
+        when: healthy.app
 
   rescue:
       - debug:
